# Ummerse

./: .gitignore  ARCHITECTURE.md  Cargo.toml  check.ps1  check_output.txt  rust-toolchain.toml
.cargo/: config.toml
crates/core/ummerse-core/src/: app.rs  engine.rs  error.rs  event.rs  input.rs  lib.rs  plugin.rs  resource.rs  signal.rs  time.rs
crates/core/ummerse-math/src/: aabb.rs  color.rs  lib.rs  plane.rs  rect.rs  transform.rs
crates/function/ummerse-audio/src/: bus.rs  lib.rs  player.rs  spatial.rs
crates/function/ummerse-physics/src/: lib.rs  world.rs
crates/function/ummerse-renderer/: Cargo.toml
crates/function/ummerse-renderer/src/: lib.rs  material.rs  mesh.rs  pipeline.rs  render_graph.rs  texture.rs
crates/function/ummerse-script/: Cargo.toml
crates/function/ummerse-script/src/: api.rs  binding.rs  runtime.rs
crates/platform/ummerse-runtime/src/: game_loop.rs  lib.rs  main.rs  platform.rs  systems.rs
crates/resource/ummerse-asset/src/: asset_server.rs  lib.rs  loader.rs  types.rs  watcher.rs
crates/resource/ummerse-scene/: Cargo.toml
crates/resource/ummerse-scene/src/: lib.rs  node2d.rs  node3d.rs  scene.rs  scene_tree.rs
crates/tool/ummerse-editor/src/: ai_assistant.rs  command_palette.rs  lib.rs  main.rs  panel.rs  project.rs  ui.rs  viewport.rs
crates/tool/ummerse-mcp/src/: engine_bridge.rs  tools.rs
crates/tool/ummerse-plugin/src/: host.rs  tool.rs  wasm_plugin.rs
crates/ummerse-asset/: Cargo.toml
crates/ummerse-asset/src/: asset_server.rs  handle.rs  loader.rs  types.rs  watcher.rs
crates/ummerse-audio/: Cargo.toml
crates/ummerse-audio/src/: bus.rs  lib.rs  player.rs  spatial.rs
crates/ummerse-core/: Cargo.toml
crates/ummerse-core/src/: app.rs  engine.rs  event.rs  input.rs  lib.rs  node.rs  plugin.rs  resource.rs  signal.rs  time.rs
crates/ummerse-editor/: Cargo.toml
crates/ummerse-editor/src/: ai_assistant.rs  command_palette.rs  lib.rs  main.rs  panel.rs  project.rs  system_prompt.txt  ui.rs  viewport.rs
crates/ummerse-math/: Cargo.toml
crates/ummerse-math/src/: color.rs  lib.rs  transform.rs
crates/ummerse-mcp/: Cargo.toml  README.md  test_mcp.ps1
crates/ummerse-mcp/src/: lib.rs  main.rs  mcp_server.rs  tools.rs
crates/ummerse-physics/: Cargo.toml
crates/ummerse-physics/src/: body.rs  collider.rs  joint.rs  lib.rs  world.rs
crates/ummerse-plugin/: Cargo.toml
crates/ummerse-plugin/src/: host.rs  lib.rs  manifest.rs  protocol.rs  tool.rs  wasm_plugin.rs
crates/ummerse-renderer/: Cargo.toml
crates/ummerse-renderer/src/: camera.rs  lib.rs  material.rs  mesh.rs  pipeline.rs  render_graph.rs  texture.rs
crates/ummerse-runtime/: Cargo.toml
crates/ummerse-runtime/src/: game_loop.rs  lib.rs  main.rs  platform.rs  systems.rs
crates/ummerse-scene/: Cargo.toml
crates/ummerse-scene/src/: components.rs  lib.rs  node2d.rs  node3d.rs  scene.rs  scene_tree.rs
crates/ummerse-script/: Cargo.toml
crates/ummerse-script/src/: api.rs  lib.rs  runtime.rs
