[workspace]
members = [
    # 🧱 Platform Layer
    "crates/platform/ummerse-runtime",

    # 🧠 Core Layer
    "crates/core/ummerse-core",
    "crates/core/ummerse-math",

    # 📦 Resource Layer
    "crates/resource/ummerse-asset",
    "crates/resource/ummerse-scene",

    # ⚙️ Function Layer
    "crates/function/ummerse-renderer",
    "crates/function/ummerse-physics",
    "crates/function/ummerse-audio",
    "crates/function/ummerse-script",

    # 🛠️ Tool Layer
    "crates/tool/ummerse-editor",
    "crates/tool/ummerse-mcp",
    "crates/tool/ummerse-plugin",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Ummerse Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ummerse/ummerse"
homepage = "https://ummerse.dev"
description = "A modern 2D/3D game engine built with Rust"

# ── 统一 Lint 规则（所有 crate 继承）──────────────────────────────────────────
[workspace.lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"
unreachable_pub = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
# 正确性
correctness = { level = "deny", priority = -1 }
# 性能
perf = { level = "warn", priority = -1 }
# 风格
style = { level = "warn", priority = -1 }
# 复杂度
complexity = { level = "warn", priority = -1 }
# 具体规则
enum_glob_use = "warn"
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
cloned_instead_of_copied = "warn"
flat_map_option = "warn"
manual_let_else = "warn"
semicolon_if_nothing_returned = "warn"
# 允许的规则（游戏引擎常见模式）
too_many_arguments = "allow"
type_complexity = "allow"
module_inception = "allow"
new_without_default = "allow"

# ── Workspace 共享依赖（避免版本碎片化，加速编译）────────────────────────────
[workspace.dependencies]

# ── Core ECS via Bevy（仅 runtime/editor 引入完整 Bevy，其他 crate 使用 bevy_ecs）
bevy_ecs = { version = "0.15", features = ["bevy_reflect"] }
bevy_app = { version = "0.15" }
bevy_reflect = { version = "0.15" }

# 完整 Bevy（仅运行时和编辑器使用）
# 精简 features 以减少编译时间
bevy = { version = "0.15", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_asset",
    "bevy_scene",
    "bevy_winit",
    "bevy_gltf",
    "bevy_animation",
    "bevy_audio",
    "png",
    "jpeg",
    "hdr",
    "ktx2",
    "tonemapping_luts",
    "serialize",
    "x11",
    "wayland",
] }

# ── GPU / Rendering ────────────────────────────────────────────────────────────
wgpu = { version = "24", features = ["wgsl"] }
naga = { version = "24", features = ["wgsl-in", "wgsl-out"] }

# ── Serialization ──────────────────────────────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.8", default-features = false, features = [
    "parse",
    "display",
] }
ron = "0.8"

# ── Async runtime ──────────────────────────────────────────────────────────────
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
    "io-util",
    "macros",
] }
async-trait = "0.1"

# ── Error handling ─────────────────────────────────────────────────────────────
anyhow = "1"
thiserror = "2"

# ── Logging ────────────────────────────────────────────────────────────────────
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# ── Math ───────────────────────────────────────────────────────────────────────
glam = { version = "0.29", features = ["serde", "bytemuck"] }
bytemuck = { version = "1", features = ["derive"] }

# ── UUID ───────────────────────────────────────────────────────────────────────
uuid = { version = "1", features = ["v4", "serde"] }

# ── Utilities ─────────────────────────────────────────────────────────────────
dashmap = "6"
parking_lot = "0.12"
bitflags = "2"
once_cell = "1"
smallvec = { version = "1", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }
ahash = "0.8"

# ── Wasm support ───────────────────────────────────────────────────────────────
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "console",
] }

# ── File system ────────────────────────────────────────────────────────────────
walkdir = "2"
notify = { version = "6", default-features = false, features = [
    "macos_fsevent",
] }

# ── Image processing ───────────────────────────────────────────────────────────
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
] }

# ── Scripting / Plugin ─────────────────────────────────────────────────────────
wasmtime = { version = "27", default-features = false, features = [
    "runtime",
    "cranelift",
    "component-model",
] }

# ── UI Layout ─────────────────────────────────────────────────────────────────
taffy = "0.5"

# ── Workspace internal crates ──────────────────────────────────────────────────
# 🧱 Platform Layer
ummerse-runtime = { path = "crates/platform/ummerse-runtime" }
# 🧠 Core Layer
ummerse-core = { path = "crates/core/ummerse-core" }
ummerse-math = { path = "crates/core/ummerse-math" }
# 📦 Resource Layer
ummerse-asset = { path = "crates/resource/ummerse-asset" }
ummerse-scene = { path = "crates/resource/ummerse-scene" }
# ⚙️ Function Layer
ummerse-renderer = { path = "crates/function/ummerse-renderer" }
ummerse-physics = { path = "crates/function/ummerse-physics" }
ummerse-audio = { path = "crates/function/ummerse-audio" }
ummerse-script = { path = "crates/function/ummerse-script" }
# 🛠️ Tool Layer
ummerse-editor = { path = "crates/tool/ummerse-editor" }
ummerse-mcp = { path = "crates/tool/ummerse-mcp" }
ummerse-plugin = { path = "crates/tool/ummerse-plugin" }

# ── Build Profiles ─────────────────────────────────────────────────────────────

# ── dev profile：增量编译 + 第三方依赖全优化 ─────────────────────────────────
[profile.dev]
opt-level = 1
debug = "line-tables-only"
incremental = true
codegen-units = 256

# 所有第三方 crate 始终以 opt-level=3 编译（只编译一次后常驻缓存）
[profile.dev.package."*"]
opt-level = 3
debug = false

# ── release profile ───────────────────────────────────────────────────────────
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 4
strip = "symbols"
panic = "abort"
debug = false

# ── release-fast profile（快速发布构建，牺牲少量优化换速度）──────────────────
[profile.release-fast]
inherits = "release"
lto = false
codegen-units = 16

# ── wasm-release profile ──────────────────────────────────────────────────────
[profile.wasm-release]
inherits = "release"
opt-level = "s"
codegen-units = 1
strip = true
lto = "fat"

# ── test profile ──────────────────────────────────────────────────────────────
[profile.test]
opt-level = 1
incremental = true
debug = "line-tables-only"

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
