[package]
name = "ummerse-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core ECS, event system, and engine primitives for Ummerse"

[dependencies]
ummerse-math.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
ron.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
once_cell.workspace = true
bitflags.workspace = true
smallvec.workspace = true
indexmap.workspace = true
ahash.workspace = true
bevy = { workspace = true }

[features]
default = []
reflect = []
