[package]
name = "ummerse-editor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Visual editor for Ummerse - VSCode+Cline style IDE with AI assistance"

[[bin]]
name = "ummerse-editor"
path = "src/main.rs"

[dependencies]
ummerse-core.workspace = true
ummerse-math.workspace = true
ummerse-renderer.workspace = true
ummerse-scene.workspace = true
ummerse-asset.workspace = true
ummerse-script.workspace = true
ummerse-plugin.workspace = true
ummerse-runtime.workspace = true
bevy = { workspace = true }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
tokio.workspace = true
async-trait.workspace = true
taffy.workspace = true
walkdir.workspace = true
notify.workspace = true
glam.workspace = true
