[package]
name = "ummerse-editor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Visual editor for Ummerse - VSCode+Cline style IDE with AI assistance"

[[bin]]
name = "ummerse-editor"
path = "src/main.rs"

[lib]
name = "ummerse_editor"
path = "src/lib.rs"

[dependencies]
ummerse-core.workspace = true
ummerse-math.workspace = true
ummerse-renderer.workspace = true
ummerse-scene.workspace = true
ummerse-asset.workspace = true
ummerse-script.workspace = true
ummerse-plugin.workspace = true
ummerse-runtime.workspace = true

# 完整 Bevy（编辑器渲染窗口）
bevy = { workspace = true }

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# UI Layout
taffy.workspace = true

# Utilities
uuid.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
glam.workspace = true

# File system
walkdir.workspace = true
notify.workspace = true
