[package]
name = "ummerse-math"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Math primitives (vec, mat, quat, transform) for Ummerse"

[dependencies]
glam.workspace = true
serde.workspace = true
bytemuck.workspace = true

[features]
default = []
