[package]
name = "ummerse-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "MCP (Model Context Protocol) Server for Ummerse - enables AI agents to control the game engine"

[[bin]]
name = "ummerse-mcp"
path = "src/main.rs"

[lib]
name = "ummerse_mcp"
path = "src/lib.rs"

[dependencies]
# Workspace internal
ummerse-core.workspace = true
ummerse-plugin.workspace = true

# Bevy (headless minimal)
bevy = { workspace = true, default-features = false, features = [
    "bevy_asset",
    "serialize",
] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Async
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "sync",
    "io-util",
    "macros",
    "io-std",
] }

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Math
glam.workspace = true

# UUID
uuid.workspace = true

[lints]
workspace = true
