[package]
name = "ummerse-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "MCP (Model Context Protocol) Server for Ummerse - enables AI agents to control the game engine"

[[bin]]
name = "ummerse-mcp"
path = "src/main.rs"

[lib]
name = "ummerse_mcp"
path = "src/lib.rs"

[dependencies]
# Serialization（核心依赖，无需 Bevy）
serde.workspace = true
serde_json.workspace = true

# Async（仅保留必要特性）
tokio = { workspace = true, features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "io-util",
    "macros",
    "io-std",
] }

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# UUID（用于实体 ID 生成）
uuid.workspace = true

[lints]
workspace = true
