[package]
name = "ummerse-physics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "2D/3D physics engine abstraction for Ummerse"

[dependencies]
ummerse-core.workspace = true
ummerse-math.workspace = true

# Serialization
serde.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# Math
glam.workspace = true

[lints]
workspace = true

[features]
default = []
