[package]
name = "ummerse-plugin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Plugin system and extension API for Ummerse - Cline-style AI tool integration"

[dependencies]
ummerse-core.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
async-trait.workspace = true
uuid.workspace = true
dashmap.workspace = true
walkdir.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmtime.workspace = true

[lints]
workspace = true

[features]
default = []
ai-tools = []
