[package]
name = "ummerse-renderer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "2D/3D rendering pipeline for Ummerse using wgpu"

[dependencies]
ummerse-core.workspace = true
ummerse-math.workspace = true
ummerse-asset.workspace = true

# GPU
wgpu.workspace = true
naga.workspace = true

# Math
glam.workspace = true
bytemuck.workspace = true

# Image
image.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# Utilities
uuid.workspace = true

[features]
default = ["backend-wgpu"]
backend-wgpu = []
backend-webgl = []
