[package]
name = "ummerse-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Game runtime, application loop, and platform abstraction for Ummerse"

[[bin]]
name = "ummerse-runtime"
path = "src/main.rs"

[lib]
name = "ummerse_runtime"
path = "src/lib.rs"

[dependencies]
ummerse-core.workspace = true
ummerse-math.workspace = true
ummerse-renderer.workspace = true
ummerse-scene.workspace = true
ummerse-asset.workspace = true
ummerse-script.workspace = true
ummerse-physics.workspace = true
ummerse-audio.workspace = true
ummerse-plugin.workspace = true

# 完整 Bevy（runtime 需要窗口+渲染）
bevy = { workspace = true }

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Math
glam.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
web-sys.workspace = true
js-sys.workspace = true

[lints]
workspace = true
