[package]
name = "ummerse-script"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Scripting runtime (Wasm-based) for Ummerse"

[dependencies]
ummerse-core.workspace = true
ummerse-math.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# Utilities
uuid.workspace = true
dashmap.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmtime.workspace = true

[lints]
workspace = true

[features]
default = []
